deploy/manifests/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: kube-nat
  labels:
    app.kubernetes.io/name: kube-nat
