deploy/manifests/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: kube-nat-agent
  namespace: kube-nat
spec:
  podSelector:
    matchLabels:
      app: kube-nat
      component: agent
  ingress:
  # metrics scraping from dashboard and Prometheus
  - ports:
    - port: 9100
      protocol: TCP
  # peer heartbeat restricted to other kube-nat agents
  - from:
    - podSelector:
        matchLabels:
          app: kube-nat
          component: agent
    ports:
    - port: 9101
      protocol: TCP
  policyTypes:
  - Ingress
